<resources>
    <string name="app_name">PSIAssist</string>
    <string name="username">Username</string>
    <string name="nome_cliente">nome cliente</string>
    <string name="mensagem">Mensagem</string>
    <string name="enviar_mensagem">Enviar mensagem</string>
    <string name="gestores">Gestores</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="clientes">Clientes</string>
    <string name="documento">Documento</string>
    <string name="descarregar_documento">Descarregar documento</string>
    <string name="o_meu_perfil">O meu perfil</string>
    <string name="apoio_ao_cliente">Apoio Ao Cliente</string>
    <string name="pedir_assistencia">Pedir Assistência</string>
    <string name="bem_vindo">Bem vindo, </string>
    <string name="pagamento">Pagamento</string>
    <string name="criar_password">Criar Password</string>
    <string name="password">**********</string>
    <string name="confirmarPassword">***</string>
    <string name="btnCriarPassword">Criar Password</string>
    <string name="logo_desc">logo_desc</string>
</resources>