<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ResetPasswordActivity">

    <!-- Container do topo com as duas imagens -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@android:color/white">

        <!-- Imagem das cruzes no topo -->

        <!-- Logotipo PSIASSIST centralizado -->
        <ImageView
            android:id="@+id/topo_image"
            android:layout_width="199dp"
            android:layout_height="212dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-2dp"
            android:layout_marginTop="-5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img1" />

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            android:contentDescription="Logotipo PSIASSIST"
            android:scaleType="fitCenter"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:layout_margin="30dp">


        <TextView
            android:id="@+id/tvResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/criar_password"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="50dp"
            android:textStyle="bold" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".01"/>


        <TextView
            android:id="@+id/tvNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="New Password" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".01"/>

        <TextView
            android:id="@+id/tvConfirmNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm New Password" />

        <EditText
            android:id="@+id/etConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/confirmarPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".01"/>

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/btnCriarPassword"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:backgroundTint="@color/black"/>



    </LinearLayout>


</LinearLayout>